--- a/projetoco1/co1.html
+++ b/projetoco1/co1.html
@@ -9,23 +9,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body  class="hi" style="background-color:#282d31;">
-    <nav>
-    <div class="nav-wrapper" style="background-color:#282d31;height:90px">
-      <a href="#" class="brand-logo">Logo</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="">fon</a></li>
-        <li><a href="">fon2</a></li>
-        <li><a href="">fon3</a></li>
-      </ul>
-    </div>
-  </nav>
+    <div class="navbar-fixed">
+    <nav style="background-color:#ce4247">
+      <div class="nav-wrapper">
+        <a href="co1.html" class="brand-logo">Logo</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="sass.html">Sobre</a></li>
+          <li><a href="badges.html">Contato</a></li>
+        </ul>
+      </div>
+    </nav>
+  </div>
     <div class="row divcenter grow" style="height:100%;">
-      <div class="col s3 hi " style="background-color:#bd4343"><img class="responsive-img side grow" src="kappa.png"></div>
-      <div class="col s6 hi " style="background-color:#b33434"><img class="responsive-img center grow" src="kappa.png"></div>
-      <div class="col s3 hi " style="background-color:#bd4343"><img class="responsive-img side grow" src="kappa.png"></div>
+      <div class="col s3 hi " style="background-color:#bdbdbd">
+        <a href="">
+          <img class="responsive-img side grow" src="bola.png">
+        </a>
+      </div>
+      <div class="col s6 hi "style="background-color:#ababab">
+        <a href="projetos.html">
+          <img class="responsive-img center pei" src="bola.png">
+        </a>
+      </div>
+      <div class="col s3 hi " style="background-color:#bdbdbd">
+        <a href="">
+          <img class="responsive-img side grow" src="bola.png">
+        </a>
+      </div>
   </div>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
   </body>
 </html>
+
+#757f84
+#596167
