--- a/projetoco1/projetos.html
+++ b/projetoco1/projetos.html
@@ -19,49 +19,48 @@
         </ul>
       </div>
     </nav>
-  </div>
-  <div class="container">
-    <div class="section">
-      <div class="row">
-        <div class="col s12">
-          <div class="section">
-            <div class="col s12">
-              <span class="title nice"> Computação</span>
-            </div>
-          <div class="col s12 m6 l4">
-            <div class="card">
-              <div class="card-image">
-                <img src="b1.jpg">
-                <span class="card-title">Card Title</span>
+    </div>
+    <div class="container">
+      <div class="section">
+        <div class="row">
+          <div class="col s12">
+            <div class="section">
+              <div class="col s12">
+                <span class="title nice"> Computação</span>
               </div>
-              <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information.
-                  I am convenient because I require little markup to use effectively.</p>
+              <div class="col s12 m6 l4">
+                <div class="card">
+                  <div class="card-image">
+                    <img  style="height:231px" src="portimg/viking.png">
+                    <span class="card-title">Card Title</span>
+                  </div>
+                  <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                      I am convenient because I require little markup to use effectively.</p>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="col s12 m6 l4">
-              <div class="card">
-                <div class="card-image">
-                  <img src="b2.jpg">
-                  <span class="card-title">Card Title</span>
-                </div>
-                <div class="card-content">
-                  <p>I am a very simple card. I am good at containing small bits of information.
-                    I am convenient because I require little markup to use effectively.</p>
+              <div class="col s12 m6 l4">
+                <div class="card">
+                  <div class="card-image">
+                    <img  style="height:231px" src="portimg/poker.png">
+                    <span class="card-title">Card Title</span>
+                  </div>
+                  <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                      I am convenient because I require little markup to use effectively.</p>
                   </div>
                 </div>
               </div>
-            <div class="col s12 m6 l4">
-              <div class="card">
-                <div class="card-image">
-                  <img src="b3.jpg">
-                  <span class="card-title">Card Title</span>
-                </div>
-                <div class="card-content">
-                  <p>I am a very simple card. I am good at containing small bits of information.
-                    I am convenient because I require little markup to use effectively.</p>
+              <div class="col s12 m6 l4">
+                <div class="card">
+                  <div class="card-image">
+                    <img  style="height:231px" src="portimg/Pikachu.png">
+                    <span class="card-title">Card Title</span>
+                  </div>
+                  <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                      I am convenient because I require little markup to use effectively.</p>
                   </div>
                 </div>
               </div>
@@ -69,89 +68,92 @@
           </div>
         </div>
       </div>
-      <div class="container">
-        <div class="section">
-          <div class="row">
-            <div class="col s12">
-              <div class="section">
-                <div class="col s12">
-                  <span class="title nice"> Eletrônica</span>
-                </div>
-                <div class="col s6">
-                  <div class="card">
-                    <div class="card-image">
-                      <img src="b1.jpg">
-                      <span class="card-title">Card Title</span>
-                    </div>
-                    <div class="card-content">
-                      <p>I am a very simple card. I am good at containing small bits of information.
-                        I am convenient because I require little markup to use effectively.</p>
-                        </div>
-                      </div>
-                    </div>
+    </div>
+    <div class="container">
+      <div class="section">
+        <div class="row">
+          <div class="col s12">
+            <div class="section">
+              <div class="col s12">
+                <span class="title nice"> Eetronica</span>
+              </div>
+              <div class="col s6">
+                <div class="card">
+                  <div class="card-image">
+                    <img  src="b2.jpg">
+                    <span class="card-title">Card Title</span>
                   </div>
-                  <div class="col s6 ">
-                    <div class="card">
-                      <div class="card-image">
-                        <img src="b2.jpg">
-                        <span class="card-title">Card Title</span>
-                      </div>
-                      <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information.
-                          I am convenient because I require little markup to use effectively.</p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+                  <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                      I am convenient because I require little markup to use effectively.</p>
                   </div>
                 </div>
               </div>
-              <div class="container">
-                <div class="section">
-                  <div class="row">
-                    <div class="col s12">
-                      <div class="section">
-                        <div class="col s12">
-                          <span class="title nice">Teórico</span>
-                        </div>
-                      <div class="col s12 m6 l4">
-                        <div class="card">
-                          <div class="card-image">
-                            <img src="b1.jpg">
-                            <span class="card-title">Card Title</span>
-                          </div>
-                          <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information.
-                              I am convenient because I require little markup to use effectively.</p>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col s12 m6 l4">
-                          <div class="card">
-                            <div class="card-image">
-                              <img src="b2.jpg">
-                              <span class="card-title">Card Title</span>
-                            </div>
-                            <div class="card-content">
-                              <p>I am a very simple card. I am good at containing small bits of information.
-                                I am convenient because I require little markup to use effectively.</p>
-                              </div>
-                            </div>
-                          </div>
-                        <div class="col s12 m6 l4">
-                          <div class="card">
-                            <div class="card-image">
-                              <img src="b3.jpg">
-                              <span class="card-title">Card Title</span>
-                            </div>
-                            <div class="card-content">
-                              <p>I am a very simple card. I am good at containing small bits of information.
-                                I am convenient because I require little markup to use effectively.</p>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+              <div class="col s6">
+                <div class="card">
+                  <div class="card-image">
+                    <img src="b1.jpg">
+                    <span class="card-title">Card Title</span>
                   </div>
+                  <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                      I am convenient because I require little markup to use effectively.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="section">
+        <div class="row">
+          <div class="col s12">
+            <div class="section">
+              <div class="col s12">
+                <span class="title nice"> Computação</span>
+              </div>
+              <div class="col s12 m6 l4">
+                <div class="card">
+                  <div class="card-image">
+                    <img  style="height:231px" src="portimg/viking.png">
+                    <span class="card-title">Card Title</span>
+                  </div>
+                  <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                      I am convenient because I require little markup to use effectively.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col s12 m6 l4">
+                <div class="card">
+                  <div class="card-image">
+                    <img  style="height:231px" src="portimg/poker.png">
+                    <span class="card-title">Card Title</span>
+                  </div>
+                  <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                      I am convenient because I require little markup to use effectively.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col s12 m6 l4">
+                <div class="card">
+                  <div class="card-image">
+                    <img  style="height:231px" src="portimg/Pikachu.png">
+                    <span class="card-title">Card Title</span>
+                  </div>
+                  <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                      I am convenient because I require little markup to use effectively.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+<html>
