logo para frente css melhor

--- a/projetoco1/co1.html
+++ b/projetoco1/co1.html
@@ -12,7 +12,7 @@
     <div class="navbar-fixed">
     <nav style="background-color:#ce4247">
       <div class="nav-wrapper">
-        <a href="co1.html" class="brand-logo">Logo</a>
+        <a href="co1.html" class="brand-logo" style="margin-left:50px">Logo</a>
         <ul class="right hide-on-med-and-down">
           <li><a href="sass.html">Sobre</a></li>
           <li><a href="badges.html">Contato</a></li>
@@ -20,20 +20,20 @@
       </div>
     </nav>
   </div>
-    <div class="row divcenter grow" style="height:100%;">
-      <div class="col s3 hi " style="background-color:#bdbdbd">
+    <div class="row divcenter " style="height:100%;">
+      <div class="col s3 hi grow " style="background-color:#bdbdbd">
         <a href="">
-          <img class="responsive-img side grow" src="bola.png">
+          <img class="responsive-img side" src="bola.png">
         </a>
       </div>
-      <div class="col s6 hi "style="background-color:#ababab">
+      <div class="col s6 hi growm "style="background-color:#ababab">
         <a href="projetos.html">
-          <img class="responsive-img center pei" src="bola.png">
+          <img class="responsive-img center" src="bola.png">
         </a>
       </div>
-      <div class="col s3 hi " style="background-color:#bdbdbd">
+      <div class="col s3 hi grow " style="background-color:#bdbdbd">
         <a href="">
-          <img class="responsive-img side grow" src="bola.png">
+          <img class="responsive-img side " src="bola.png">
         </a>
       </div>
     </div>
