--- a/projetoco1/projetos.html
+++ b/projetoco1/projetos.html
@@ -9,16 +9,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body style="background-color:#f6f4f1">
-    <div class="navbar-fixed">
-    <nav style="background-color:#ce4247">
-      <div class="nav-wrapper">
-        <a href="co1.html" class="brand-logo">Logo</a>
-        <ul class="right hide-on-med-and-down">
-          <li><a href="sass.html">Sobre</a></li>
-          <li><a href="badges.html">Contato</a></li>
-        </ul>
+    <header>
+      <div class="navbar-fixed">
+      <nav style="background-color:#ce4247">
+        <div class="nav-wrapper">
+          <a href="index.html" class="brand-logo" style="margin-left:50px">Logo</a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="sass.html">Sobre</a></li>
+            <li><a href="badges.html">Contato</a></li>
+          </ul>
+        </div>
+      </nav>
       </div>
-    </nav>
+    </header>
+    <div class="parallax-container">
+      <div class="parallax">
+        <img src="./b1.jpg">
+      </div>
     </div>
     <div class="container">
       <div class="section">
@@ -155,5 +162,12 @@
         </div>
       </div>
     </div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+    <script>
+      $(document).ready(function(){
+        $('.parallax').parallax();
+      });
+    </script>
   </body>
 <html>
