--- a/projetoco1/sobre.html
+++ b/projetoco1/sobre.html
@@ -13,7 +13,7 @@
       <div class="navbar-fixed">
       <nav style="background-color:#ce4247" role="navigation">
         <div class="nav-wrapper">
-          <a href="co1.html" class="brand-logo" style="margin-left:50px">Logo</a>
+          <a href="index.html" class="brand-logo" style="margin-left:50px">Logo</a>
           <ul class="right hide-on-med-and-down">
             <li><a href="sass.html">Sobre</a></li>
             <li><a href="badges.html">Contato</a></li>
@@ -23,7 +23,7 @@
     </header>
     <div class="parallax-container">
       <div class="parallax">
-        <img src="./b1.jpg" style="display: block;">
+        <img src="portimg/Predio.png" style="display: block;">
       </div>
     </div>
   <div class="section" style="height:385px">
@@ -56,12 +56,18 @@
     <div class="row z-depth-2  white">
       <div class="col s12 m3 center-on-small-only">
         <div class="image-container teamphoto">
-          <img src="kappa.png" class="teamphoto responsive-img" style="max-height:360px">
+          <img src="portimg/Felippe.png" class="teamphoto responsive-img" style="max-height:350px">
         </div>
       </div>
       <div class="col s12 m9">
         <h3>Terabyte</h3>
-        <p>Alvin is an Information Systems and Human Computer Interaction Major. He worked as a Software Engineer at Fidelity Investments this past summer.</p>
+        <p>Aluno de engenharia mecatrônica no Insper</p>
+        <p>Projetos de destaque:</p>
+        <ul>
+          <li>Aquecedor Termoelétrico</li>
+          <li>Jogo de Poker em Python</li>
+          <li>Pinguiche</li>
+        </ul>
       </div>
     </div>
   </div>
