--- a/projetoco1/sobre.html
+++ b/projetoco1/sobre.html
@@ -56,7 +56,7 @@
     <div class="row z-depth-2  white">
       <div class="col s12 m3 center-on-small-only">
         <div class="image-container teamphoto">
-          <img src="portimg/Felippe.png" class="teamphoto responsive-img" style="max-height:350px">
+          <img src="portimg/Felippe.png" class="teamphoto responsive-img" style="max-height:100%">
         </div>
       </div>
       <div class="col s12 m9">
