--- a/projetoco1/sobre.html
+++ b/projetoco1/sobre.html
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="col s12 m9">
-        <h3>Terabyte</h3>
+        <h3>Felippe Teracini</h3>
         <p>Aluno de engenharia mecatrônica no Insper</p>
         <p>Projetos de destaque:</p>
         <ul>
