--- a/projetoco1/projetos.html
+++ b/projetoco1/projetos.html
@@ -38,12 +38,12 @@
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img  style="height:231px" src="portimg/viking.png">
-                    <span class="card-title">Card Title</span>
+                    <img  style="height:220px" src="portimg/viking.png">
+                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">computer</i></a>
                   </div>
                   <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.
-                      I am convenient because I require little markup to use effectively.</p>
+                    <h5> Jogo Viking </h5>
+                    <p>Jogo de aventura criado em python como projeto da materia Design de Software</p>
                   </div>
                 </div>
               </div>
