--- a/projetoco1/sobre.html
+++ b/projetoco1/sobre.html
@@ -64,7 +64,7 @@
         <p>Aluno de engenharia mecatrônica no Insper</p>
         <p>Projetos de destaque:</p>
         <ul>
-          <li>Aquecedor Termoelétrico</li>
+          <li>Gerador Termoelétrico</li>
           <li>Jogo de Poker em Python</li>
           <li>Pinguiche</li>
         </ul>
