--- a/projetoco1/projetos.html
+++ b/projetoco1/projetos.html
@@ -24,7 +24,7 @@
     </header>
     <div class="parallax-container">
       <div class="parallax">
-        <img src="./b1.jpg">
+        <img src="portimg/Lab.png">
       </div>
     </div>
     <div class="container">
@@ -50,24 +50,24 @@
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img  style="height:231px" src="portimg/poker.png">
-                    <span class="card-title">Card Title</span>
+                    <img  style="height:220px" src="portimg/poker.png">
+                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">computer</i></a>
                   </div>
                   <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.
-                      I am convenient because I require little markup to use effectively.</p>
+                    <h5>Jogo de Poker</h5>
+                    <p>Projeto da materia Design de Software que é um jogo de Poker</p>
                   </div>
                 </div>
               </div>
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img  style="height:231px" src="portimg/Pikachu.png">
-                    <span class="card-title">Card Title</span>
+                    <img  style="height:220px" src="portimg/Pikachu.png">
+                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">computer</i></a>
                   </div>
                   <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.
-                      I am convenient because I require little markup to use effectively.</p>
+                    <h5> InsperMon </h5>
+                    <p> Jogo que se assemelha ao Pokemon, feito para a materia Design de Software</p>
                   </div>
                 </div>
               </div>
@@ -82,15 +82,16 @@
           <div class="col s12">
             <div class="section">
               <div class="col s12">
-                <span class="title nice"> Eetronica</span>
+                <span class="title nice"> Eetrônica </span>
               </div>
               <div class="col s6">
                 <div class="card">
                   <div class="card-image">
                     <img  src="b2.jpg">
-                    <span class="card-title">Card Title</span>
+                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">power</i></a>
                   </div>
                   <div class="card-content">
+                    <h5> Card Title </h5>
                     <p>I am a very simple card. I am good at containing small bits of information.
                       I am convenient because I require little markup to use effectively.</p>
                   </div>
@@ -100,9 +101,10 @@
                 <div class="card">
                   <div class="card-image">
                     <img src="b1.jpg">
-                    <span class="card-title">Card Title</span>
+                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">power</i></a>
                   </div>
                   <div class="card-content">
+                    <h5> Card Title </h5>
                     <p>I am a very simple card. I am good at containing small bits of information.
                       I am convenient because I require little markup to use effectively.</p>
                   </div>
@@ -119,41 +121,41 @@
           <div class="col s12">
             <div class="section">
               <div class="col s12">
-                <span class="title nice"> Computação</span>
+                <span class="title nice"> Mecânica </span>
               </div>
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img  style="height:231px" src="portimg/viking.png">
-                    <span class="card-title">Card Title</span>
+                    <img  style="height:220px" src="portimg/Gerador.png">
+                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons"> build </i></a>
                   </div>
                   <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.
-                      I am convenient because I require little markup to use effectively.</p>
+                    <h5> Gerador Termoelétrico </h5>
+                    <p> Projeto para a materia Modelagem e Simulação, que se trata da simulação de um Gerador Termoelétrico</p>
                   </div>
                 </div>
               </div>
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img  style="height:231px" src="portimg/poker.png">
-                    <span class="card-title">Card Title</span>
+                    <img  style="height:220px" src="portimg/poker.png">
+                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons"> build </i></a>
                   </div>
                   <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.
-                      I am convenient because I require little markup to use effectively.</p>
+                    <h5> Card Title </h5>
+                    <p>I am a very simple card. I am good at containing small bits of information fsdfsfsdfsdfsfdsfsdffss.</p>
                   </div>
                 </div>
               </div>
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img  style="height:231px" src="portimg/Pikachu.png">
-                    <span class="card-title">Card Title</span>
+                    <img  style="height:220px" src="portimg/Pikachu.png">
+                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons"> build </i></a>
                   </div>
                   <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.
-                      I am convenient because I require little markup to use effectively.</p>
+                    <h5> Card Title </h5>
+                    <p>I am a very simple card. I am good at containing small bits of information fsdfsfsdfsdfsfdsfsdffss.</p>
                   </div>
                 </div>
               </div>
