--- a/projetoco1/projetos.html
+++ b/projetoco1/projetos.html
@@ -13,7 +13,7 @@
       <div class="navbar-fixed">
       <nav style="background-color:#ce4247">
         <div class="nav-wrapper">
-          <a href="index.html" class="brand-logo" style="margin-left:50px">Logo</a>
+          <a href="index.html" class="brand-logo" style="margin-left:50px"><img src="portimg/Insper.png" style="max-height:50px"></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="sass.html">Sobre</a></li>
             <li><a href="badges.html">Contato</a></li>
@@ -82,7 +82,7 @@
           <div class="col s12">
             <div class="section">
               <div class="col s12">
-                <span class="title nice"> Eetrônica </span>
+                <span class="title nice"> Eletrônica </span>
               </div>
               <div class="col s6">
                 <div class="card">
