--- a/projetoco1/sobre.html
+++ b/projetoco1/sobre.html
@@ -61,13 +61,15 @@
       </div>
       <div class="col s12 m9">
         <h3>Felippe Teracini</h3>
-        <p>Aluno de engenharia mecatrônica no Insper</p>
-        <p>Projetos de destaque:</p>
-        <ul>
-          <li>Gerador Termoelétrico</li>
-          <li>Jogo de Poker em Python</li>
-          <li>Pinguiche</li>
-        </ul>
+        <div class="aboutfont">
+          <p>Aluno de engenharia mecatrônica no Insper</p>
+          <p>Projetos de destaque:</p>
+          <lu>
+            <li>Gerador Termoelétrico</li>
+            <li>Jogo de Poker em Python</li>
+            <li>Pinguiche</li>
+        </lu>
+      </div>
       </div>
     </div>
   </div>
