--- a/projetoco1/sobre.html
+++ b/projetoco1/sobre.html
@@ -56,7 +56,9 @@
     <div class="row z-depth-2  white">
       <div class="col s12 m3 center-on-small-only">
         <div class="image-container teamphoto">
-          <img src="portimg/Felippe.png" class="teamphoto responsive-img" style="max-height:100%">
+          <a  href="tera.html">
+            <img src="portimg/Felippe.png" class="teamphoto responsive-img" style="max-height:100%">
+          </a>
         </div>
       </div>
       <div class="col s12 m9">
