--- a/projetoco1/Tera.html
+++ b/projetoco1/Tera.html
@@ -27,7 +27,9 @@
         <img src="arm.jpg">
       </div>
     </div>
-    <img class="perfil" src="fon.jpeg">
+    <div class="perfil">
+     <img class="materializebox circle responsive-img" src="fon.jpeg">
+    </div>
     <div class="container">
         <div class="section">
           <div class="row">
