--- a/projetoco1/Tera.html
+++ b/projetoco1/Tera.html
@@ -11,7 +11,7 @@
   <body style="background-color:#f6f4f1">
     <header>
       <div class="navbar-fixed">
-      <nav style="background-color:#ce4247">
+      <nav style="background-color:#363232">
         <div class="nav-wrapper">
           <a href="index.html" class="brand-logo" style="margin-left:50px">JL.inc</a>
           <ul class="right hide-on-med-and-down">
@@ -69,13 +69,13 @@
                 <span class="title nice"> Computação</span>
               </div>
               <div class="col s12 m6 l4">
-                <div class="card">
+                <div class="card" href="projects.html">
                   <div class="card-image">
-                    <img  style="height:220px" src="portimg/viking.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">computer</i></a>
+                    <img  style="height:220px" src="portimg/viking.png" href="projects.html">
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black" href="projects.html"><i class="material-icons">computer</i></a>
                   </div>
                   <div class="card-content">
-                    <h5> Jogo Viking </h5>
+                    <h5><a href="projects.html">Jogo Viking</a> </h5>
                     <p>Jogo de aventura criado em python como projeto da materia Design de Software</p>
                   </div>
                 </div>
@@ -84,7 +84,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img  style="height:220px" src="portimg/poker.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">computer</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons">computer</i></a>
                   </div>
                   <div class="card-content">
                     <h5>Jogo de Poker</h5>
@@ -96,7 +96,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img  style="height:220px" src="portimg/Pikachu.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">computer</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons">computer</i></a>
                   </div>
                   <div class="card-content">
                     <h5> InsperMon </h5>
@@ -121,7 +121,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img  src="b2.jpg">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">power</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons">power</i></a>
                   </div>
                   <div class="card-content">
                     <h5> Card Title </h5>
@@ -134,7 +134,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img src="b1.jpg">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">power</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons">power</i></a>
                   </div>
                   <div class="card-content">
                     <h5> Card Title </h5>
@@ -160,7 +160,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img  style="height:220px" src="portimg/Gerador.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons"> build </i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons"> build </i></a>
                   </div>
                   <div class="card-content">
                     <h5> Gerador Termoelétrico </h5>
@@ -172,7 +172,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img  style="height:220px" src="portimg/poker.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons"> build </i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons"> build </i></a>
                   </div>
                   <div class="card-content">
                     <h5> Card Title </h5>
@@ -184,7 +184,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img  style="height:220px" src="portimg/Pikachu.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons"> build </i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons"> build </i></a>
                   </div>
                   <div class="card-content">
                     <h5> Card Title </h5>
@@ -197,7 +197,7 @@
         </div>
       </div>
     </div>
-    <footer class="page-footer" style="background-color:#ce4247">
+    <footer class="page-footer" style="background-color:#363232">
         <div class="container">
           <div class="row">
             <div class="col l6 s12">
@@ -214,7 +214,7 @@
             </div>
           </div>
         </div>
-        <div class="footer-copyright" style="background-color:#902E33">
+        <div class="footer-copyright" style="background-color:#292525">
           <div class="container">
           © 2017 Todos os direitos reservados
           </div>
