--- a/projetoco1/index.html
+++ b/projetoco1/index.html
@@ -10,7 +10,7 @@
   </head>
   <body  class="hi" style="background-color:#282d31;">
     <div class="navbar-fixed">
-    <nav style="background-color:#ce4247">
+    <nav style="background-color:#363232">
       <div class="nav-wrapper">
         <a href="index.html" class="brand-logo" style="margin-left:50px">Logo</a>
         <ul class="right hide-on-med-and-down">
