--- a/projetoco1/projects.html
+++ b/projetoco1/projects.html
@@ -11,7 +11,7 @@
   <body style="background-color:#f6f4f1">
     <header>
       <div class="navbar-fixed">
-      <nav style="background-color:#ce4247">
+      <nav style="background-color:#363232">
         <div class="nav-wrapper">
           <a href="index.html" class="brand-logo" style="margin-left:50px"><img src="portimg/Insper.png" style="max-height:50px"></a>
           <ul class="right hide-on-med-and-down">
@@ -25,28 +25,28 @@
     <div class="slider">
     <ul class="slides">
       <li>
-        <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
+        <img src="b2.jpg"> <!-- random image -->
         <div class="caption center-align">
           <h3>This is our big Tagline!</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <img src="https://lorempixel.com/580/250/nature/2"> <!-- random image -->
+        <img src="b1.jpg"> <!-- random image -->
         <div class="caption left-align">
           <h3>Left Aligned Caption</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <img src="https://lorempixel.com/580/250/nature/3"> <!-- random image -->
+        <img src="b3.jpg"> <!-- random image -->
         <div class="caption right-align">
           <h3>Right Aligned Caption</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
       </li>
       <li>
-        <img src="https://lorempixel.com/580/250/nature/4"> <!-- random image -->
+        <img src="b2.jpg"> <!-- random image -->
         <div class="caption center-align">
           <h3>This is our big Tagline!</h3>
           <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -84,7 +84,7 @@
       </div>
     </div>
   </div>
-    <footer class="page-footer" style="background-color:#ce4247">
+    <footer class="page-footer" style="background-color:#363232">
         <div class="container">
           <div class="row">
             <div class="col l6 s12">
@@ -101,7 +101,7 @@
             </div>
           </div>
         </div>
-        <div class="footer-copyright" style="background-color:#902E33">
+        <div class="footer-copyright" style="background-color:#292525">
           <div class="container">
           © 2017 Todos os direitos reservados
           </div>
