--- a/projetoco1/projetos.html
+++ b/projetoco1/projetos.html
@@ -11,7 +11,7 @@
   <body style="background-color:#f6f4f1">
     <header>
       <div class="navbar-fixed">
-      <nav style="background-color:#ce4247">
+      <nav style="background-color:#363232">
         <div class="nav-wrapper">
           <a href="index.html" class="brand-logo" style="margin-left:50px"><img src="portimg/Insper.png" style="max-height:50px"></a>
           <ul class="right hide-on-med-and-down">
@@ -39,7 +39,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img  style="height:220px" src="portimg/viking.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">computer</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light" style="background-color: black"><i class="material-icons">computer</i></a>
                   </div>
                   <div class="card-content">
                     <h5> Jogo Viking </h5>
@@ -51,7 +51,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img  style="height:220px" src="portimg/poker.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">computer</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light" style="background-color: black"><i class="material-icons">computer</i></a>
                   </div>
                   <div class="card-content">
                     <h5>Jogo de Poker</h5>
@@ -63,7 +63,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img  style="height:220px" src="portimg/Pikachu.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">computer</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons">computer</i></a>
                   </div>
                   <div class="card-content">
                     <h5> InsperMon </h5>
@@ -88,7 +88,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img  src="b2.jpg">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">power</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light" style="background-color: black"><i class="material-icons">power</i></a>
                   </div>
                   <div class="card-content">
                     <h5> Card Title </h5>
@@ -101,7 +101,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img src="b1.jpg">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">power</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light " style="background-color: black"><i class="material-icons">power</i></a>
                   </div>
                   <div class="card-content">
                     <h5> Card Title </h5>
@@ -127,7 +127,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img  style="height:220px" src="portimg/Gerador.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons"> build </i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light "  style="background-color: black"><i class="material-icons"> build </i></a>
                   </div>
                   <div class="card-content">
                     <h5> Gerador Termoelétrico </h5>
@@ -139,7 +139,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img  style="height:220px" src="portimg/poker.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons"> build </i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light " style="background-color: black"><i class="material-icons"> build </i></a>
                   </div>
                   <div class="card-content">
                     <h5> Card Title </h5>
@@ -151,7 +151,7 @@
                 <div class="card">
                   <div class="card-image">
                     <img  style="height:220px" src="portimg/Pikachu.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons"> build </i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light " style="background-color: black"><i class="material-icons"> build </i></a>
                   </div>
                   <div class="card-content">
                     <h5> Card Title </h5>
