--- a/projetoco1/sobre.html
+++ b/projetoco1/sobre.html
@@ -11,7 +11,7 @@
   <body style="background-color:#f6f4f1">
     <header>
       <div class="navbar-fixed">
-      <nav style="background-color:#ce4247" role="navigation">
+      <nav style="background-color:#363232" role="navigation">
         <div class="nav-wrapper">
           <a href="index.html" class="brand-logo" style="margin-left:50px">Logo</a>
           <ul class="right hide-on-med-and-down">
