--- a/projetoco1/Tera.html
+++ b/projetoco1/Tera.html
@@ -13,10 +13,9 @@
       <div class="navbar-fixed">
       <nav style="background-color:#363232">
         <div class="nav-wrapper">
-          <a href="index.html" class="brand-logo" style="margin-left:50px">JL.inc</a>
+          <a href="indexc.html" class="brand-logo" style="margin-left:50px">JL.inc</a>
           <ul class="right hide-on-med-and-down">
             <li><a href="sass.html">Sobre</a></li>
-            <li><a href="badges.html">Contato</a></li>
           </ul>
         </div>
       </nav>
@@ -41,16 +40,9 @@
                 <div class="col s12 ">
                   <div class="card">
                     <div class="card-content">
-                      <h5> Significado de Perfil </h5>
+                      <h5> Felippe Nalin Teracini </h5>
                       <p>
-                          substantivo masculino
-                          Conjunto dos traços do rosto de uma pessoa visto de lado.
-                          Aspecto, representação de um objeto visto de lado.
-                          Descrição em traços rápidos, retrato moral de uma pessoa.
-                          [Arquitetura] Desenho de um corte perpendicular de cima a baixo de um edifício.
-                          Perfil do solo, corte vertical do terreno desde a superfície até a rocha matriz que lhe deu origem, a fim de estudar suas diversas camadas.
-                          locução adverbial
-                          De perfil, de lado.</p>
+                          Sou um aluno de Engenharia Mecatrônica do Insper que gosta muito de programar.</p>
                     </div>
                   </div>
                 </div>
@@ -84,10 +76,10 @@
                 <div class="card">
                   <div class="card-image">
                     <img  style="height:220px" src="portimg/poker.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons">computer</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black" href="Poker.html"><i class="material-icons">computer</i></a>
                   </div>
                   <div class="card-content">
-                    <h5>Jogo de Poker</h5>
+                    <h5><a href="Poker.html">Insper Poker</a></h5>
                     <p>Projeto da materia Design de Software que é um jogo de Poker</p>
                   </div>
                 </div>
