--- a/projetoco1/sobre.html
+++ b/projetoco1/sobre.html
@@ -13,7 +13,7 @@
       <div class="navbar-fixed">
       <nav style="background-color:#3a3a3a" role="navigation">
         <div class="nav-wrapper">
-          <a href="indexc.html" class="brand-logo" style="margin-left:50px">Logo</a>
+          <a href="indexc.html" class="brand-logo" style="margin-left:50px">JL.inc</a>
           <ul class="right hide-on-med-and-down">
             <li><a href="sobre.html">Sobre</a></li>
           </ul>
