--- a/projetoco1/projetos.html
+++ b/projetoco1/projetos.html
@@ -13,10 +13,9 @@
       <div class="navbar-fixed">
       <nav style="background-color:#363232">
         <div class="nav-wrapper">
-          <a href="index.html" class="brand-logo" style="margin-left:50px"><img src="portimg/Insper.png" style="max-height:50px"></a>
+          <a href="indexc.html" class="brand-logo" style="margin-left:50px"><img src="portimg/Insper.png" style="max-height:50px"></a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sobre</a></li>
-            <li><a href="badges.html">Contato</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
           </ul>
         </div>
       </nav>
