--- a/projetoco1/Tera.html
+++ b/projetoco1/Tera.html
@@ -15,7 +15,7 @@
         <div class="nav-wrapper">
           <a href="indexc.html" class="brand-logo" style="margin-left:50px">JL.inc</a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sobre</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
           </ul>
         </div>
       </nav>
@@ -64,10 +64,10 @@
                 <div class="card" href="projects.html">
                   <div class="card-image">
                     <img  style="height:220px" src="portimg/viking.png" href="projects.html">
-                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black" href="projects.html"><i class="material-icons">computer</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons">computer</i></a>
                   </div>
                   <div class="card-content">
-                    <h5><a href="projects.html">Jogo Viking</a> </h5>
+                    <h5>Jogo Viking</h5>
                     <p>Jogo de aventura criado em python como projeto da materia Design de Software</p>
                   </div>
                 </div>
@@ -112,26 +112,24 @@
               <div class="col s6">
                 <div class="card">
                   <div class="card-image">
-                    <img  src="b2.jpg">
+                    <img  src="portimg/termometro.png" style="height:440px">
                     <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons">power</i></a>
                   </div>
                   <div class="card-content">
-                    <h5> Card Title </h5>
-                    <p>I am a very simple card. I am good at containing small bits of information.
-                      I am convenient because I require little markup to use effectively.</p>
+                    <h5> Termômetro </h5>
+                    <p>Projeto desenvolvido para Instrumentação e Medição, com o propósito de fazer um Termômetro. Era regulado pela resistência, que variava conforme a temperatura.</p>
                   </div>
                 </div>
               </div>
               <div class="col s6">
                 <div class="card">
                   <div class="card-image">
-                    <img src="b1.jpg">
+                    <img src="portimg/placa.png" style="height:440px">
                     <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons">power</i></a>
                   </div>
                   <div class="card-content">
-                    <h5> Card Title </h5>
-                    <p>I am a very simple card. I am good at containing small bits of information.
-                      I am convenient because I require little markup to use effectively.</p>
+                    <h5> Estação Metereológica </h5>
+                    <p>Projeto desenvolvido a fim de medir a temperatura, umidade, pressão e quantidade de gases nocivos no ambiente. Feito programando um arduino Uno.</p>
                   </div>
                 </div>
               </div>
@@ -163,24 +161,24 @@
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img  style="height:220px" src="portimg/poker.png">
+                    <img  style="height:220px" src="portimg/basquete.png">
                     <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons"> build </i></a>
                   </div>
                   <div class="card-content">
-                    <h5> Card Title </h5>
-                    <p>I am a very simple card. I am good at containing small bits of information fsdfsfsdfsdfsfdsfsdffss.</p>
+                    <h5> Basquete </h5>
+                    <p>Modelagem da trajetória de uma bola de basquete após um arremesso de diferentes distâncias</p>
                   </div>
                 </div>
               </div>
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img  style="height:220px" src="portimg/Pikachu.png">
+                    <img  style="height:220px" src="portimg/comida.png">
                     <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons"> build </i></a>
                   </div>
                   <div class="card-content">
-                    <h5> Card Title </h5>
-                    <p>I am a very simple card. I am good at containing small bits of information fsdfsfsdfsdfsfdsfsdffss.</p>
+                    <h5> Aquecimento de Comida </h5>
+                    <p>Modelagem do tempo ideal necessário para esquentar comida no microondas, utilizando parâmetros físicos.</p>
                   </div>
                 </div>
               </div>
@@ -189,12 +187,10 @@
         </div>
       </div>
     </div>
-    <footer class="page-footer" style="background-color:#363232">
+    <footer class="page-footer" style="background-color:#717170">
         <div class="container">
           <div class="row">
             <div class="col l6 s12">
-              <h5 class="white-text">Footer Content</h5>
-              <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
             </div>
             <div class="col l4 offset-l2 s12">
               <h5 class="white-text">Contato</h5>
