--- a/projetoco1/sobre.html
+++ b/projetoco1/sobre.html
@@ -22,7 +22,7 @@
     </header>
     <div class="parallax-container">
       <div class="parallax foto">
-        <img src="1.jpg" style="display: block;">
+        <img src="portimg/Lab.png" style="display: block;">
       </div>
     </div>
   <div class="section" style="height:385px">
@@ -52,11 +52,11 @@
     <div class="row z-depth-2 white">
       <div class="col s12 m3 center-on-small-only">
         <div class="image-container teamphoto">
-          <img src="kappa.png" class="teamphoto responsive-img " style="max-height:360px">
+          <img src="portimg/Diego.png" class="teamphoto responsive-img " style="max-height:360px">
         </div>
       </div>
       <div class="col s12 m9">
-        <h3>Diegold 99</h3>
+        <h3>Diego David</h3>
         <div class="aboutfont">
             <p>Aluno de engenharia mecatrônica no Insper</p>
             <p>Projetos de destaque:</p>
@@ -74,7 +74,7 @@
       <div class="col s12 m3 center-on-small-only">
         <div class="image-container teamphoto">
           <a  href="tera.html">
-            <img src="kappa.png" class="teamphoto responsive-img" style="max-height:100%">
+            <img src="portimg/Tarraf.png" class="teamphoto responsive-img" style="max-height:100%">
           </a>
         </div>
       </div>
@@ -96,11 +96,11 @@
     <div class="row z-depth-2 white">
       <div class="col s12 m3 center-on-small-only">
         <div class="image-container teamphoto">
-          <img src="kappa.png" class="teamphoto responsive-img " style="max-height:360px"> 
+          <img src="portimg/laet.png" class="teamphoto responsive-img " style="max-height:360px"> 
         </div>
       </div>
       <div class="col s12 m9">
-        <h3>J.L</h3>
+        <h3>João Laet</h3>
         <div class="aboutfont">
             <p>Aluno de engenharia mecatrônica no Insper</p>
             <p>Projetos de destaque:</p>
@@ -117,8 +117,6 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="white-text">Footer Content</h5>
-            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
           </div>
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Contato</h5>
