--- a/projetoco1/indexc.html
+++ b/projetoco1/indexc.html
@@ -25,8 +25,9 @@
     <div class="container">
         <div class="row">
             <div class="  col s12 center-align">
-                <p class="intro ">Welcome to JL.inc</p>
-                <a  href="sobre.html" class=" btn grey darken-1" style="width:300px">Join Us</a>
+                <p class="intro "><h1 style="color: white">Bem Vindo a JL.inc</h1>
+                <h5 style="color: white"> Portfólio de projetos feitos por alunos de Engenharia do Insper </h5></p>
+                <a  href="sobre.html" class=" btn grey darken-1" style="width:300px">Conheça a Equipe</a>
             </div>
         </div>
     </div>
