projetos quase final

--- a/projetoco1/Tera.html
+++ b/projetoco1/Tera.html
@@ -63,12 +63,12 @@
               <div class="col s12 m6 l4">
                 <div class="card" href="projects.html">
                   <div class="card-image">
-                    <img  style="height:220px" src="portimg/viking.png" href="projects.html">
-                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons">computer</i></a>
+                    <img  style="height:220px" src="portimg/site.png" href="projects.html">
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black" href="site.html"><i class="material-icons">computer</i></a>
                   </div>
                   <div class="card-content">
-                    <h5>Jogo Viking</h5>
-                    <p>Jogo de aventura criado em python como projeto da materia Design de Software</p>
+                    <h5><a href="site.html"> Portfólio </a></h5>
+                    <p> Site feito para a matéria Codesign de Aplicativos, como portfólio de projetos</p>
                   </div>
                 </div>
               </div>
@@ -88,10 +88,10 @@
                 <div class="card">
                   <div class="card-image">
                     <img  style="height:220px" src="portimg/Pikachu.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons">computer</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black" href="inspermon.html"><i class="material-icons">computer</i></a>
                   </div>
                   <div class="card-content">
-                    <h5> InsperMon </h5>
+                    <h5><a href="inspermon.html"> InsperMon </a></h5>
                     <p> Jogo que se assemelha ao Pokemon, feito para a materia Design de Software</p>
                   </div>
                 </div>
@@ -113,10 +113,10 @@
                 <div class="card">
                   <div class="card-image">
                     <img  src="portimg/termometro.png" style="height:440px">
-                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons">power</i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black" href="termometro.html"><i class="material-icons">power</i></a>
                   </div>
                   <div class="card-content">
-                    <h5> Termômetro </h5>
+                    <h5><a href="termometro.html"> Termômetro </a></h5>
                     <p>Projeto desenvolvido para Instrumentação e Medição, com o propósito de fazer um Termômetro. Era regulado pela resistência, que variava conforme a temperatura.</p>
                   </div>
                 </div>
@@ -124,7 +124,7 @@
               <div class="col s6">
                 <div class="card">
                   <div class="card-image">
-                    <img src="portimg/placa.png" style="height:440px">
+                    <img src="portimg/lcd.png" style="height:440px">
                     <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons">power</i></a>
                   </div>
                   <div class="card-content">
@@ -150,10 +150,10 @@
                 <div class="card">
                   <div class="card-image">
                     <img  style="height:220px" src="portimg/Gerador.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons"> build </i></a>
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black" href="gerador.html"><i class="material-icons"> build </i></a>
                   </div>
                   <div class="card-content">
-                    <h5> Gerador Termoelétrico </h5>
+                    <h5> <a href="gerador.html">Gerador Termoelétrico </a></h5>
                     <p> Projeto para a materia Modelagem e Simulação, que se trata da simulação de um Gerador Termoelétrico</p>
                   </div>
                 </div>
@@ -161,24 +161,24 @@
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img  style="height:220px" src="portimg/basquete.png">
-                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons"> build </i></a>
+                    <img  style="height:220px" src="portimg/paraquedas.png">
+                    <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black" href="paraquedas.html"><i class="material-icons"> build </i></a>
                   </div>
                   <div class="card-content">
-                    <h5> Basquete </h5>
-                    <p>Modelagem da trajetória de uma bola de basquete após um arremesso de diferentes distâncias</p>
+                    <h5><a href="paraquedas.html"> Salto de Paraquedas</a> </h5>
+                    <p>Modelagem da trajetória de um paraquedista após um salto de paraquedas</p>
                   </div>
                 </div>
               </div>
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img  style="height:220px" src="portimg/comida.png">
+                    <img  style="height:220px" src="portimg/robo.png">
                     <a class="btn-floating halfway-fab waves-effect waves-light"  style="background-color: black"><i class="material-icons"> build </i></a>
                   </div>
                   <div class="card-content">
-                    <h5> Aquecimento de Comida </h5>
-                    <p>Modelagem do tempo ideal necessário para esquentar comida no microondas, utilizando parâmetros físicos.</p>
+                    <h5> Insperbot 42 </h5>
+                    <p> Robô de batalha do estilo drum, feito como projeto para a entidade estudantil SMASH.</p>
                   </div>
                 </div>
               </div>
